--- a/edit_classification/prepare_data.ipynb
+++ b/edit_classification/prepare_data.ipynb
@@ -25,9 +25,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json']\n",
+      "INFO:Loading files: ['../data/inspection_rating_annotated/batch_1_ayush.json', '../data/inspection_rating_annotated/batch_1_rachel.json', '../data/inspection_rating_annotated/batch_1_vinayak.json', '../data/inspection_rating_annotated/batch_1_vishnesh.json', '../data/inspection_rating_annotated/batch_2_ayush.json', '../data/inspection_rating_annotated/batch_2_rachel.json', '../data/inspection_rating_annotated/batch_2_vinayak.json', '../data/inspection_rating_annotated/batch_2_vishnesh.json', '../data/inspection_rating_annotated/batch_3_ayush.json', '../data/inspection_rating_annotated/batch_3_rachel.json', '../data/inspection_rating_annotated/batch_3_vishnesh.json', '../data/inspection_rating_annotated/batch_4_ayush.json', '../data/inspection_rating_annotated/batch_4_rachel.json', '../data/inspection_rating_annotated/batch_4_vishnesh.json']\n",
       "\n",
-      "INFO:Found users: {'vinayak', 'rachel', 'vishnesh', 'ayush'}\n",
+      "INFO:Found users: {'ayush', 'vinayak', 'vishnesh', 'rachel'}\n",
       "\n",
       "WARNING:rachel - Batch 1, HIT 1 (ID 420) has 3 deletion edits but 2 annotations. Likely a missing annotation.\n",
       "WARNING:rachel - Batch 1, HIT 49 (ID 564) has 2 split edits but 1 annotations. Likely a missing annotation.\n",
@@ -37,12 +37,22 @@
       "WARNING:rachel - Batch 2, HIT 311 (ID 931) has 4 substitution edits but 3 annotations. Likely a missing annotation.\n",
       "WARNING:rachel - Batch 2, HIT 321 (ID 961) has 9 substitution edits but 8 annotations. Likely a missing annotation.\n",
       "WARNING:rachel - Batch 2, HIT 373 (ID 1117) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:ayush - Batch 3, HIT 573 (ID 1311) has 3 reorder edits but 2 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 579 (ID 1324) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 587 (ID 1340) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 426 (ID 1416) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 475 (ID 1514) has 2 structure edits but 1 annotations. Likely a missing annotation.\n",
-      "WARNING:rachel - Batch 3, HIT 479 (ID 1522) has 2 deletion edits but 1 annotations. Likely a missing annotation.\n"
+      "WARNING:ayush - Batch 3, HIT 573 (ID 1363) has 3 reorder edits but 2 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 579 (ID 1382) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 587 (ID 1406) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 605 (ID 1460) has 5 substitution edits but 4 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 426 (ID 1518) has 1 deletion edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 475 (ID 1616) has 2 structure edits but 1 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 3, HIT 479 (ID 1624) has 2 deletion edits but 1 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 673 (ID 1795) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 675 (ID 1799) has 3 substitution edits but 2 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 679 (ID 1807) has 4 substitution edits but 3 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 2 deletion edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 4 substitution edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 1 split edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 3 reorder edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 686 (ID 1821) has 1 structure edits but 0 annotations. Likely a missing annotation.\n",
+      "WARNING:rachel - Batch 4, HIT 692 (ID 1833) has 5 deletion edits but 4 annotations. Likely a missing annotation.\n"
      ]
     }
    ],
@@ -95,6 +105,7 @@
    ],
    "source": [
     "# convert all edit annotation (a list of words) to a format of [error/quality/trivial, severity or efficacy, grammar error or not]\n",
+    "# Update April 18, add error category to the 4th element of the annotation\n",
     "for point in data:\n",
     "    for edit in point['edits']:\n",
     "        annotation = edit['annotation']\n",
@@ -104,64 +115,64 @@
     "        try:\n",
     "            if edit_type == \"deletion\":\n",
     "                if annotation[0] == \"good\":\n",
-    "                    edit['annotation'] = [\"quality\", value_dict[annotation[1]], annotation[2]]\n",
+    "                    edit['annotation'] = [\"quality\", value_dict[annotation[1]], annotation[2], \"good deletion\"]\n",
     "                elif annotation[0] == \"bad\":\n",
-    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[1]], annotation[2]]\n",
+    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[1]], annotation[2], \"bad deletion\"]\n",
     "                else:\n",
-    "                    edit['annotation'] = [\"trivial\", 0, annotation[1]]\n",
+    "                    edit['annotation'] = [\"trivial\", 0, annotation[1], \"unnecessary deletion\"]\n",
     "            elif edit_type == \"insertion\":\n",
     "                if annotation[0] == \"elaboration\":\n",
-    "                    edit['annotation'] = [\"quality\", value_dict[annotation[1]], annotation[2]]\n",
+    "                    edit['annotation'] = [\"quality\", value_dict[annotation[1]], annotation[2], annotation[0]]\n",
     "                elif annotation[0] == \"trivial\":\n",
     "                    if annotation[1] == \"yes\":\n",
-    "                        edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[3]]\n",
+    "                        edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[3], annotation[0]]\n",
     "                    else:\n",
-    "                        edit['annotation'] = [\"trivial\", 0, annotation[3]]\n",
+    "                        edit['annotation'] = [\"trivial\", 0, annotation[3], \"unnecessary insertion\"]\n",
     "                else:\n",
-    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[1]], annotation[2]]\n",
+    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[1]], annotation[2], annotation[0]]\n",
     "            elif edit_type == \"substitution\":\n",
     "                if annotation[0] == \"same\":\n",
     "                    if annotation[1] == \"negative\":\n",
-    "                        edit['annotation'] = [\"error\", -1 * value_dict[annotation[3]], annotation[4]]\n",
+    "                        edit['annotation'] = [\"error\", -1 * value_dict[annotation[3]], annotation[4], \"bad paraphrase\"]\n",
     "                    elif annotation[1] == \"positive\":\n",
-    "                        edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[4]]\n",
+    "                        edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[4], \"good paraphrase\"]\n",
     "                    else:\n",
-    "                        edit['annotation'] = [\"trivial\", 0, annotation[4]]\n",
+    "                        edit['annotation'] = [\"trivial\", 0, annotation[4], \"unnecessary paraphrase\"]\n",
     "                elif annotation[0] == \"different\":\n",
-    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[1]], annotation[2]]\n",
+    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[1]], annotation[2], \"different information\"]\n",
     "                elif annotation[0] == \"less\":\n",
     "                    if annotation[1] == \"bad\":\n",
-    "                        edit['annotation'] = [\"error\", -1 * value_dict[annotation[2]], annotation[3]]\n",
+    "                        edit['annotation'] = [\"error\", -1 * value_dict[annotation[2]], annotation[3], \"remove important information\"]\n",
     "                    else:\n",
-    "                        edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[3]]\n",
+    "                        edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[3], \"remove unimportant information\"]\n",
     "                elif annotation[0] == \"more\":\n",
     "                    if annotation[1] == \"elaboration\":\n",
-    "                        edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[3]]\n",
+    "                        edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[3], annotation[1]]\n",
     "                    elif annotation[1] == \"trivial\":\n",
     "                        if annotation[2] == \"yes\":\n",
-    "                            edit['annotation'] = [\"quality\", value_dict[annotation[3]], annotation[4]]\n",
+    "                            edit['annotation'] = [\"quality\", value_dict[annotation[3]], annotation[4], annotation[1]]\n",
     "                        else:\n",
-    "                            edit['annotation'] = [\"trivial\", 0, annotation[4]]\n",
+    "                            edit['annotation'] = [\"trivial\", 0, annotation[4], \"unnecessary add information\"]\n",
     "                    else:\n",
-    "                        edit['annotation'] = [\"error\", -1 * value_dict[annotation[2]], annotation[3]]\n",
+    "                        edit['annotation'] = [\"error\", -1 * value_dict[annotation[2]], annotation[3], annotation[1]]\n",
     "            elif edit_type == \"split\" or edit_type == \"reorder\":\n",
     "                if annotation[0] == \"negative\":\n",
-    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[1]], annotation[3]]\n",
+    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[1]], annotation[3], f\"bad {edit_type}\"]\n",
     "                elif annotation[0] == \"positive\":\n",
-    "                    edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[3]]\n",
+    "                    edit['annotation'] = [\"quality\", value_dict[annotation[2]], annotation[3], f\"good {edit_type}\"]\n",
     "                else:\n",
-    "                    edit['annotation'] = [\"trivial\", 0, annotation[3]]\n",
+    "                    edit['annotation'] = [\"trivial\", 0, annotation[3], f\"unnecessary {edit_type}\"]\n",
     "            elif edit_type == \"structure\":\n",
     "                if annotation[1] == \"negative\":\n",
-    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[2]], annotation[4]]\n",
+    "                    edit['annotation'] = [\"error\", -1 * value_dict[annotation[2]], annotation[4], annotation[0]]\n",
     "                elif annotation[1] == \"positive\":\n",
-    "                    edit['annotation'] = [\"quality\", value_dict[annotation[3]], annotation[4]]\n",
+    "                    edit['annotation'] = [\"quality\", value_dict[annotation[3]], annotation[4], annotation[0]]\n",
     "                else:\n",
-    "                    edit['annotation'] = [\"trivial\", 0, annotation[4]]\n",
+    "                    edit['annotation'] = [\"trivial\", 0, annotation[4], \"unnecessary \" + annotation[0]]\n",
     "        except:\n",
     "            print(edit_type, annotation)\n",
     "            if edit_type == \"substitution\" and annotation[0] == \"different\" and annotation[-1] == \"\":\n",
-    "                edit[\"annotation\"] = [\"error\", -1 * value_dict[annotation[1]], \"no\"]\n",
+    "                edit[\"annotation\"] = [\"error\", -1 * value_dict[annotation[1]], \"no\", \"different information\"]\n",
     "            else:\n",
     "                edit['annotation'] = []"
    ]
@@ -219,14 +230,18 @@
     "            edit['score'] = 0\n",
     "            edit['round_score'] = 0\n",
     "            edit['label'] = \"trivial\"\n",
+    "            edit[\"edit_category_list\"] = []\n",
+    "            edit[\"edit_category\"] = \"\"\n",
     "        else:\n",
     "            score = 0\n",
+    "            edit_category_list = []\n",
     "            num_annot = len(edit['annotation'])\n",
     "            for user, annotation in edit['annotation'].items():\n",
     "                if annotation == []:\n",
     "                    num_annot -= 1\n",
     "                    continue\n",
     "                score += annotation[1]\n",
+    "                edit_category_list.append(annotation[3])\n",
     "            edit['score'] = score / num_annot\n",
     "            edit['round_score'] = round(edit['score'])\n",
     "            if edit['score'] > 0:\n",
@@ -234,7 +249,10 @@
     "            elif edit['score'] < 0:\n",
     "                edit['label'] = \"error\"\n",
     "            else:\n",
-    "                edit['label'] = \"trivial\""
+    "                edit['label'] = \"trivial\"\n",
+    "            edit[\"edit_category_list\"] = edit_category_list\n",
+    "            # edit category is the most frequent edit category\n",
+    "            edit[\"edit_category\"] = max(set(edit_category_list), key=edit_category_list.count)"
    ]
   },
   {
