--- a/edit_classification/prepare_data_classification_approach.ipynb
+++ b/edit_classification/prepare_data_classification_approach.ipynb
@@ -23,7 +23,7 @@
    "source": [
     "import json\n",
     "\n",
-    "split_name = \"test\"\n",
+    "split_name = \"train\"\n",
     "\n",
     "with open(f\"../data/edit_classification/inspection_data/{split_name}_1234.json\", 'r') as f:\n",
     "    data = json.load(f)\n",
@@ -106,7 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "Counter({'error': 66, 'quality': 394, 'trivial': 73})"
+       "Counter({'trivial': 386, 'quality': 2910, 'error': 390})"
       ]
      },
      "execution_count": 3,
