add 3b and 11b data

--- a/data/yao/assign_annotators_to_batches_new-wiki-4-ctrl-t5.ipynb
+++ b/data/yao/assign_annotators_to_batches_new-wiki-4-ctrl-t5.ipynb
@@ -16,7 +16,7 @@
     "which_wiki = 4\n",
     "\n",
     "# Read in the data\n",
-    "df = pd.read_csv(f'all-outputs-new-wiki-{which_wiki}.csv')"
+    "df = pd.read_csv(f'all-outputs-new-wiki-{which_wiki}-ctrl-t5.csv')"
    ]
   },
   {
@@ -88,10 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "split_idx = 75\n",
-    "\n",
-    "# Human 1 Writing,Human 1,Human 2 Writing,Human 2,GPT-3-zero-shot,GPT-3-few-shot,Muss,T5-3B,T5-11B\n",
-    "system_list = [\"Davinci-003\", \"Turbo\", \"GPT-4\", \"Alpaca-7b\", \"Vicuna-7b\"]\n",
+    "system_list = [\"Ctrl-T5-3b\", \"Ctrl-T5-11b\"]\n",
     "for annotater in annotater_dict:\n",
     "    annotater_batch = []\n",
     "    start_id = 0\n",
@@ -122,7 +119,7 @@
     "            annotater_batch += [current_dict]\n",
     "            start_id += 1\n",
     "\n",
-    "    with open(f\"../batches/new-wiki-{which_wiki}/{annotater}.json\", \"w\") as f:\n",
+    "    with open(f\"../batches/new-wiki-{which_wiki}-ct/{annotater}.json\", \"w\") as f:\n",
     "        json.dump(annotater_batch, f, indent=4)"
    ]
   }
