--- a/data/yao/combine_all_outputs_new-wiki-4-ctrl-t5.ipynb
+++ b/data/yao/combine_all_outputs_new-wiki-4-ctrl-t5.ipynb
@@ -25,29 +25,17 @@
     "    for i in range(len(original_sentences)):\n",
     "        original_sentences[i] = original_sentences[i].strip()\n",
     "\n",
-    "# davinci-003\n",
-    "with open(f'../../gpt_3/gpt-outputs/zero-shot-003-batch-{which_wiki}.json') as f:\n",
-    "    gpt3 = json.load(f)\n",
+    "# ctrl-t5-3b\n",
+    "with open(f'ctrl-t5-3B-new-wiki-{which_wiki}-output.txt') as f:\n",
+    "    t5_3b = f.readlines()\n",
+    "    for i in range(len(t5_3b)):\n",
+    "        t5_3b[i] = t5_3b[i].strip()\n",
     "\n",
-    "# turbo\n",
-    "with open(f'../../gpt_3/gpt-outputs/zero-shot-turbo-batch-{which_wiki}.json') as f:\n",
-    "    turbo = json.load(f)\n",
-    "\n",
-    "# gpt-4\n",
-    "with open(f\"../../gpt_3/gpt-outputs/zero-shot-gpt-4-batch-{which_wiki}.json\") as f:\n",
-    "    gpt_4 = json.load(f)\n",
-    "\n",
-    "# alpaca-7b\n",
-    "with open(f'alpaca-7B-new-wiki-{which_wiki}-output.txt') as f:\n",
-    "    alpaca_7b = f.readlines()\n",
-    "    for i in range(len(alpaca_7b)):\n",
-    "        alpaca_7b[i] = alpaca_7b[i].strip()\n",
-    "\n",
-    "# vicuna-7b\n",
-    "with open(f'vicuna-7B-new-wiki-{which_wiki}-output.txt') as f:\n",
-    "    vicuna_7b = f.readlines()\n",
-    "    for i in range(len(vicuna_7b)):\n",
-    "        vicuna_7b[i] = vicuna_7b[i].strip()"
+    "# ctrl-t5-11b\n",
+    "with open(f'ctrl-t5-11B-new-wiki-{which_wiki}-output.txt') as f:\n",
+    "    t5_11b = f.readlines()\n",
+    "    for i in range(len(t5_11b)):\n",
+    "        t5_11b[i] = t5_11b[i].strip()"
    ]
   },
   {
@@ -59,11 +47,8 @@
     "# make dataframe with all outputs\n",
     "df = pd.DataFrame()\n",
     "df['Original Sentence'] = original_sentences\n",
-    "df['Davinci-003'] = gpt3\n",
-    "df['Turbo'] = turbo\n",
-    "df['GPT-4'] = gpt_4\n",
-    "df['Alpaca-7b'] = alpaca_7b\n",
-    "df['Vicuna-7b'] = vicuna_7b"
+    "df['Ctrl-T5-3b'] = t5_3b\n",
+    "df['Ctrl-T5-11b'] = t5_11b"
    ]
   },
   {
@@ -72,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(f'all-outputs-new-wiki-{which_wiki}-before-splitting.csv', index=False)"
+    "df.to_csv(f'all-outputs-new-wiki-{which_wiki}-ctrl-t5-before-splitting.csv', index=False)"
    ]
   },
   {
@@ -133,11 +118,8 @@
    "source": [
     "# reformat output with reformat_output function\n",
     "for index, row in df.iterrows():\n",
-    "    df.loc[index, 'Davinci-003'] = reformat_output(row['Davinci-003'], row['Original Sentence'])\n",
-    "    df.loc[index, 'Turbo'] = reformat_output(row['Turbo'], row['Original Sentence'])\n",
-    "    df.loc[index, 'GPT-4'] = reformat_output(row['GPT-4'], row['Original Sentence'])\n",
-    "    df.loc[index, 'Alpaca-7b'] = reformat_output(row['Alpaca-7b'], row['Original Sentence'])\n",
-    "    df.loc[index, 'Vicuna-7b'] = reformat_output(row['Vicuna-7b'], row['Original Sentence'])"
+    "    df.loc[index, 'Ctrl-T5-3b'] = reformat_output(row['Ctrl-T5-3b'], row['Original Sentence'])\n",
+    "    df.loc[index, 'Ctrl-T5-11b'] = reformat_output(row['Ctrl-T5-11b'], row['Original Sentence'])"
    ]
   },
   {
@@ -146,7 +128,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(f'all-outputs-new-wiki-{which_wiki}.csv', index=False)"
+    "df.to_csv(f'all-outputs-new-wiki-{which_wiki}-ctrl-t5.csv', index=False)"
    ]
   },
   {
